# bild

./: .gitignore  Cargo.toml
.cargo/: config.toml
app/: Cargo.toml
app/examples/: graph.rs  polyline.rs
app/src/: app.rs  lib.rs
app/src/circuit/: circuit_graph.rs  circuit_graph_render.rs  commands.rs  graph-core.rs  graph_gizmos.rs  mod.rs  query.rs  relations.rs
app/src/circuit/net/: mod.rs
app/src/circuit/part/: capacitor.rs  diode.rs  inductor.rs  mod.rs  resistor.rs
app/src/circuit/pin/: mod.rs
app/src/circuit/trace/: mod.rs
app/src/event/: mod.rs
app/src/event/in_event/: mod.rs
app/src/event/out_event/: mod.rs
app/src/tool/: mod.rs
app/src/tool/block_tool/: mod.rs
app/src/tool/comment_tool/: mod.rs
app/src/tool/markup_tool/markup/polyline/: mod.rs
app/src/view/: mod.rs
app/src/view/layout_3d/: ground_plane.rs  mod.rs
app/src/view/layout_3d/tool/: mod.rs  transform_tool.rs
app/src/view/layout_3d/tool/block_tool/: mod.rs
app/src/view/layout_3d/tool/markup_tool/: mod.rs
app/src/view/layout_3d/tool/markup_tool/markup/polyline/: mod.rs
app/src/view/layout_3d/tool/markup_tool/markup/rectangle/: mod.rs
app/src/view/schematic_2d/: mod.rs  node_tool.rs
cli/: Cargo.toml
crates/bevy_polyline/: Cargo.toml
crates/bevy_polyline/examples/: minimal.rs  nbody.rs  perspective.rs
crates/bevy_polyline/src/: lib.rs  material.rs  polyline.rs
crates/bild/: Cargo.toml
crates/bild/src/: app.rs  lib.rs
crates/bild/src/event/in_event/: mod.rs
crates/bild/src/event/out_event/: mod.rs
crates/bild/src/tool/: mod.rs  transform_tool.rs
crates/bild/src/tool/block_tool/: mod.rs
crates/bild/src/tool/comment_tool/: mod.rs
crates/bild/src/tool/markup_tool/: mod.rs
crates/bild/src/tool/markup_tool/markup/: mod.rs
crates/bild/src/tool/markup_tool/markup/polyline/: mod.rs
crates/bild/src/tool/markup_tool/markup/rectangle/: mod.rs
crates/bild_core/: Cargo.toml
crates/bild_core/src/: comment.rs  keybinding.rs  lib.rs  simulation.rs  time.rs
crates/block3d_algorithm/: Cargo.toml  readme.md
crates/block3d_algorithm/src/: connection.rs  lib.rs
crates/block3d_algorithm/src/wfc/: graph.rs  mod.rs  observer.rs  wfc_explanation.md
crates/block3d_algorithm/src/wfc/heuristics/: mod.rs  weighted_random_heuristic.rs
crates/block3d_algorithm/src/wfc/invariants/: gravity_invariant.rs  mod.rs
crates/block3d_algorithm/src/wfc/solver/: compatibility.rs  error.rs  mod.rs  spatial_grid.rs  state.rs
crates/block3d_core/: Cargo.toml  README.md
crates/block3d_core/src/: distribution.rs  lib.rs  types.rs
crates/block3d_core/src/block/: analog_components.rs  lego_block.rs  mod.rs  physical_simulation_traits.rs  skylark_block.rs
crates/block3d_core/src/connection/: mod.rs
crates/block3d_core/src/face/: mod.rs
crates/block3d_core/src/grid/: grid_position.rs  mod.rs
crates/block3d_core/src/orientation/: mod.rs
crates/block3d_core/src/symmetry/: mod.rs
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs  markers.rs  raycast.rs  render_layer.rs  rig.rs
crates/camera/src/controller/: mod.rs  (+1 more)
crates/camera_2d/: Cargo.toml
crates/camera_2d/examples/: editor_camera_2d.rs
crates/camera_3d/: Cargo.toml
crates/camera_3d/examples/: cad.rs  map.rs  minimal.rs  ortho.rs  pseudo_ortho.rs  split_screen.rs  zoom_limits.rs
crates/camera_3d/src/: lib.rs
crates/circuit_physics_core/: Cargo.toml
crates/circuit_physics_core/src/: electromagnetic.rs  environment_degradation.rs  lib.rs  lifetime.rs  material_properties.rs  mechanical.rs  optical.rs  physical.rs  radiation.rs  thermal.rs
crates/compute/: Cargo.toml
crates/compute/src/: lib.rs
crates/context_menu/: Cargo.toml
crates/context_menu/examples/: simple.rs
crates/context_menu/src/: lib.rs  ui.rs
crates/duplex/: Cargo.toml
crates/duplex/src/: event_channel.rs  lib.rs
crates/geometry/: Cargo.toml  README.md
crates/geometry/src/: lib.rs
crates/geometry/src/primitives/: mod.rs  ribbon.rs
crates/geometry/src/representation/: mod.rs
crates/geometry/src/representation/bezier_curve/: mod.rs
crates/geometry/src/representation/brep/: mod.rs
crates/geometry/src/representation/csg/: mod.rs
crates/geometry/src/representation/heightfields/: mod.rs
crates/geometry/src/representation/mesh/: mod.rs
crates/geometry/src/representation/meshlets/: mod.rs
crates/geometry/src/representation/metaballs/: mod.rs
crates/geometry/src/representation/nurbs/: mod.rs
crates/geometry/src/representation/octrees/: mod.rs
crates/geometry/src/representation/polyline/: material.rs  mod.rs  plugin.rs  polyline.rs
crates/geometry/src/representation/polyline/shaders/: polyline.wgsl
crates/geometry/src/representation/splines/: mod.rs
crates/geometry/src/representation/voxel_grid/: mod.rs
crates/geometry/src/traits/: mod.rs
crates/infinite_grid/: Cargo.toml
crates/infinite_grid/examples/: simple.rs  simple_2d.rs
crates/interaction/: Cargo.toml
crates/interaction/src/: lib.rs
crates/layer/: Cargo.toml
crates/layer/src/: lib.rs
crates/material/: Cargo.toml
crates/meshable/: Cargo.toml
crates/meshable/src/: lib.rs
crates/pane_layout/: Cargo.toml
crates/pane_layout/src/: handlers.rs  lib.rs  ui.rs
crates/picking/: Cargo.toml
crates/picking/src/: double_click.rs  lib.rs
crates/styles/: Cargo.toml
crates/styles/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  toolbar.rs
crates/ui_3d/: Cargo.toml
crates/ui_3d/src/: lib.rs
crates/viewport_2d/: Cargo.toml
crates/viewport_2d/src/: lib.rs
crates/viewport_3d/: Cargo.toml
crates/viewport_3d/src/: lib.rs  selection_box.rs  view_gizmo.rs
crates/widget_2d/: Cargo.toml
crates/widget_2d/src/: comment.rs  lib.rs
crates/widget_3d/: Cargo.toml
crates/widget_3d/src/: worldspace_ui_node.rs
docs/: 02_net-list.md  03_differential-equations.md  05_thermal_coupling.md  06_electromagnetic_coupling.md  07_mechanical_coupling.md  08_radiation_coupling.md  09_acoustic_coupling.md  10_graphs.md  hypergraph_circuit.md  overivew.md  plan.md
docs/hypergraph/: 00_overview.md
(+21 files in other folders)
