[workspace]
resolver = "2"
edition = "2024"
members = [
    "crates/*"
    ]
exclude = ["crates/input"]

[workspace.package]
version = "0.1.0"
authors = ["Hector Crean <hectorcrean@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
bild = { path = "crates/bild" }
bild_core = { path = "crates/bild_core" }
camera = { path = "crates/camera" }
picking = { path = "crates/picking" }
meshable = { path = "crates/meshable" }
duplex = { path = "crates/duplex" }
block3d_core = { path = "crates/block3d_core" }
block3d_algorithm = { path = "crates/block3d_algorithm" }
ui = { path = "crates/ui" }
ui_3d = { path = "crates/ui_3d" }
geometry = { path = "crates/geometry" }
compute = { path = "crates/compute" }
layer = { path = "crates/layer" }
interaction = { path = "crates/interaction" }
render = { path = "crates/render" }


bevy = { path = "../bevy", features = ["shader_format_wesl"] }
leafwing-input-manager = { path = "../leafwing-input-manager"}
ts-rs = { version = "10.1.0", features = ["serde-compat", "bytes",  "chrono", "serde_json", "serde-json-impl", "tokio", "url", "uuid", "uuid-impl", "chrono-impl"] }
futures = "0.3.31"
schemars = "0.9.0"
wesl = { version = "0.1.2", features = ["package", "generics", "serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.15", features = ["js"] }
uom = { version = "0.36.0", features = ["serde"] }


serde = { version = "1.0.199", features = ["derive"] }
serde_json = { version = "1.0.116" }
crossbeam-channel = "0.5.12"
color-eyre = "0.6.3"
thiserror = "1.0.59"
itertools = "0.13.0"
image = "0.24"
bitflags = "2.4"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
bincode = "2.0.0-rc.3"
bytemuck = "1.14"
bevy_asset_loader = "0.22.0"
bevy_web_asset = { version = "0.9"}
reqwest = { version = "0.12.7", features = ["json"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
geojson = { version = "0.24.1"}
once_cell = "1.19.0"

tracing = { version = "0.1.40" }
tracing-test = { version = "0.2.5" }



# Simulation dependencies
rayon = "1.8"
wgpu = "0.19"
num_cpus = "1.16"

# Database
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "uuid",
    "time",
    "chrono",
    "postgres",
    "macros"
]}

# Utils
dotenv = "0.15.0"
walkdir = "2.3.3"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.4"
petgraph = "0.6.5"
urlencoding = "2.1.3"
wiremock = "0.5"