[package]
name = "bild"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camera = { workspace = true }
picking = { workspace = true }
meshable = { workspace = true }
material = { workspace = true }
duplex = { workspace = true }
once_cell = { workspace = true }

bevy = { workspace = true }
ts-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
ui = { workspace = true }
ui_3d = { workspace = true }
console_error_panic_hook = { version = "0.1.6" } 
uuid = { workspace = true }
block3d_core = { workspace = true }
block3d_algorithm = { workspace = true }
layer = { workspace = true }
bild_core = { workspace = true }
bevy_polyline = { workspace = true }
leafwing-input-manager = { workspace = true }
interaction = { workspace = true }
bitflags = { workspace = true }