[package]
name = "duplex"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
ts-rs = { workspace = true }